2012-11-26  James Robinson  <jamesr@chromium.org>

        [chromium] Remove deprecated and unused WebGraphicsContext3D compositor binding calls
        https://bugs.webkit.org/show_bug.cgi?id=103322

        Reviewed by Adam Barth.

        These have been uncalled for a while.

        * chromium/public/WebLayerTreeViewClient.h:
        (WebLayerTreeViewClient):

2012-11-23  Sami Kyostila  <skyostil@chromium.org>

        [chromium] Remove WebScreenInfo.{horizontal,vertical}DPI
        https://bugs.webkit.org/show_bug.cgi?id=101772

        Reviewed by Adam Barth.

        Now that nothing is using WebScreenInfo.{horizontal,vertical}DPI we can simply
        remove them.

        * chromium/public/WebScreenInfo.h:
        (WebKit::WebScreenInfo::WebScreenInfo):

2012-11-22  David Reveman  <reveman@chromium.org>

        [Chromium] Add GL_CHROMIUM_pixel_transfer_buffer_object extension support.
        https://bugs.webkit.org/show_bug.cgi?id=102528

        Reviewed by James Robinson.

        Add mapBufferCHROMIUM and unmapBufferCHROMIUM prototypes to WebGraphicsContext3D.h.

        * chromium/public/WebGraphicsContext3D.h:
        (WebGraphicsContext3D):
        (WebKit::WebGraphicsContext3D::mapBufferCHROMIUM):
        (WebKit::WebGraphicsContext3D::unmapBufferCHROMIUM):

2012-11-21  Harald Alvestrand  <hta@google.com>

        WebMediaStreamComponent: Add assignment and copy operators
        https://bugs.webkit.org/show_bug.cgi?id=102915

        Reviewed by Adam Barth.

        * chromium/public/WebMediaStreamComponent.h:
        (WebKit::WebMediaStreamComponent::WebMediaStreamComponent):
        (WebKit::WebMediaStreamComponent::operator=):
        (WebMediaStreamComponent):

2012-11-19  Dana Jansens  <danakj@chromium.org>

        [chromium] Remove the WebCompositorSupport virtual methods from the base class
        https://bugs.webkit.org/show_bug.cgi?id=102153

        Reviewed by James Robinson.
